; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-scene.c_obs_sceneitem_set_info.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-scene.c_obs_sceneitem_set_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32, i32, i32, i32, i32 }
%struct.obs_transform_info = type { i32, i32, i32, i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @obs_sceneitem_set_info(%struct.TYPE_4__* %0, %struct.obs_transform_info* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca %struct.obs_transform_info*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store %struct.obs_transform_info* %1, %struct.obs_transform_info** %4, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %6 = icmp ne %struct.TYPE_4__* %5, null
  br i1 %6, label %7, label %48

7:                                                ; preds = %2
  %8 = load %struct.obs_transform_info*, %struct.obs_transform_info** %4, align 8
  %9 = icmp ne %struct.obs_transform_info* %8, null
  br i1 %9, label %10, label %48

10:                                               ; preds = %7
  %11 = load %struct.obs_transform_info*, %struct.obs_transform_info** %4, align 8
  %12 = getelementptr inbounds %struct.obs_transform_info, %struct.obs_transform_info* %11, i32 0, i32 6
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 6
  store i32 %13, i32* %15, align 4
  %16 = load %struct.obs_transform_info*, %struct.obs_transform_info** %4, align 8
  %17 = getelementptr inbounds %struct.obs_transform_info, %struct.obs_transform_info* %16, i32 0, i32 5
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 5
  store i32 %18, i32* %20, align 4
  %21 = load %struct.obs_transform_info*, %struct.obs_transform_info** %4, align 8
  %22 = getelementptr inbounds %struct.obs_transform_info, %struct.obs_transform_info* %21, i32 0, i32 4
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 4
  store i32 %23, i32* %25, align 4
  %26 = load %struct.obs_transform_info*, %struct.obs_transform_info** %4, align 8
  %27 = getelementptr inbounds %struct.obs_transform_info, %struct.obs_transform_info* %26, i32 0, i32 3
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 3
  store i32 %28, i32* %30, align 4
  %31 = load %struct.obs_transform_info*, %struct.obs_transform_info** %4, align 8
  %32 = getelementptr inbounds %struct.obs_transform_info, %struct.obs_transform_info* %31, i32 0, i32 2
  %33 = load i32, i32* %32, align 4
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 2
  store i32 %33, i32* %35, align 4
  %36 = load %struct.obs_transform_info*, %struct.obs_transform_info** %4, align 8
  %37 = getelementptr inbounds %struct.obs_transform_info, %struct.obs_transform_info* %36, i32 0, i32 1
  %38 = load i32, i32* %37, align 4
  %39 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 1
  store i32 %38, i32* %40, align 4
  %41 = load %struct.obs_transform_info*, %struct.obs_transform_info** %4, align 8
  %42 = getelementptr inbounds %struct.obs_transform_info, %struct.obs_transform_info* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %45 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %44, i32 0, i32 0
  store i32 %43, i32* %45, align 4
  %46 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %47 = call i32 @do_update_transform(%struct.TYPE_4__* %46)
  br label %48

48:                                               ; preds = %10, %7, %2
  ret void
}

declare dso_local i32 @do_update_transform(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
